# mesh-ripper

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md  index.html
.github/workflows/: release.yaml
script/: get-run-files-as-json  package-run  usage-estimator
src/: app.rs  main.rs  support.rs
src/app/: Cargo.toml  actions.rs  audio.rs  input.rs  loading.rs  menu.rs  player.rs  render.rs  resources.rs
src/app/inspector/: mod.rs  vec_as_dropdown.rs
src/app/resources/: actions.rs  asset_load_checker.rs  background_meshes.rs  camera.rs  glob_or_dir_loader.rs  load_manager.rs  lod_midpoint_iterator.rs  mesh_aabb_estimator.rs  mesh_lookat_estimator.rs  mesh_pool.rs  wave_positions.rs
src/app/resources/camera/: camera_system.rs  camera_system_visualization.rs  camera_timeline.rs
src/support/: loader_fu.rs
src/support/loader_fu/: features.rs  render.rs
