[package]
name = "mesh-ripper" # ToDo
version = "0.3.0"
publish = ["crates-io"]
authors = ["rezural <rezural@protonmail.com>"]
edition = "2018"

[profile.dev]
opt-level = 1

[features]
default = [
    "bevy/bevy_gltf",
    "bevy/bevy_winit",
    "bevy/render",
    "bevy/png",
]

native = [
    "bevy/bevy_wgpu",
]

web = [
    "bevy_webgl2",
]

dev = [
    "bevy/dynamic",
    "native",
]

[dependencies]
bevy = "0.5.0"
winit = "0.25.0"
bevy_webgl2 = { version = "0.5.2", optional = true }
structopt = "0.3.21"
rand = "0.8.3"
bevy_fly_camera = "0.7.0"
glob = "0.3.0"
alphanumeric-sort = "1.4.3"
serde_json = "1.0.64"
parry3d = { version = "0.5.1", features = ["serde-serialize"] }
bevy-inspector-egui = "0.5.1"
bevy_obj = { git = "https://github.com/rezural/bevy_obj.git", branch = "create-normals-and-uv-data" }
bevy_kira_audio = { version = "0.4.0" } 

[build-dependencies]
embed-resource = "1.6.3"
