[package]
name = "mesh-ripper" # ToDo
version = "0.4.0"
publish = ["crates-io"]
authors = ["rezural <rezural@protonmail.com>"]
edition = "2018"

[profile.dev]
opt-level = 1

[features]
default = [
    "bevy/bevy_gltf",
    "bevy/bevy_winit",
    "bevy/render",
    "bevy/png",
]

native = [
    "bevy/bevy_wgpu",
]

web = [
    "bevy_webgl2",
]

dev = [
    "bevy/dynamic",
    "native",
]

[dependencies]
structopt = "0.3"
rand = "0.8"
glob = "0.3"
alphanumeric-sort = "1.4"

bevy = "0.5"
winit = "0.25"
bevy_webgl2 = { version = "0.5", optional = true }
bevy-inspector-egui = "0.5"
bevy_kira_audio = { version = "0.4" } 
bevy_gizmos  = { git = "https://github.com/rezural/bevy_gizmos.git", branch = "main" }
glam = { version = "0.13", features = [ "mint" ] }
bevy_fly_camera = "0.7"

bevy_stl = "0.3"
bevy_obj = { git = "https://github.com/rezural/bevy_obj", branch = "create-normals-and-uv-data" }
bevy_ply = { version = "0.1", git = "https://github.com/rezural/bevy_ply", branch = "main" }
mint = "0.5"

nalgebra = { version = "0.27", features = [ "mint", "serde-serialize"] }
parry3d = { version = "0.5", features = ["serde-serialize"] }

serde = "1"
serde_json = "1"
ron = { version = "0.6"}
walkdir = "2.3"

[build-dependencies]
embed-resource = "1.6"
